# bnc

./: CHANGES  Changelog  Makefile  Makefile.in  README  advbnc.c  bnc.c  bnc.conf  bncchk  bncsetup  cmds.c  common.h  conf.c  config.h.in  configure  configure.in  ctcp.c  ctcp.h  example.conf  mkpasswd.c  motd  mtype.c  mtype.h  res.c  res.h  sbuf.c  sbuf.h  send.c  send.h  server.c  struct.h  todo  x.in
