dnl Process this file with autoconf to produce a configure script.
AC_INIT(bnc.c)
AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_ISC_POSIX
AC_AIX


dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_HEADER_TIME
AC_CHECK_HEADERS(sys/time.h unistd.h sys/select.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_LIB(socket, select, LIBS="$LIBS -lsocket",)
AC_CHECK_LIB(nsl, select, LIBS="$LIBS -lnsl",)
AC_CHECK_LIB(resolv, gethostbyname, LIBS="$LIBS -lresolv",)
AC_CHECK_LIB(gnumalloc, malloc, LIBS="$LIBS -lgnumalloc",
AC_CHECK_LIB(bsdmalloc, malloc, LIBS="$LIBS -lbsdmalloc",))

AC_CHECK_LIB(inet, select, LIBS="$LIBS -linet",)
AC_CHECK_LIB(cposix, select, LIBS="$LIBS -lcposix",)
AC_CHECK_LIB(net, select, LIBS="$LIBS -lnet",)
AC_CHECK_LIB(crypt, crypt, LIBS="$LIBS -lcrypt",)

dnl Check for SSL support.
AC_MSG_CHECKING(whether to enable SSL support)
AC_ARG_WITH(ssl,
[  -with-ssl              Enable SSL support],
[ case "$withval" in
    yes)
      AC_MSG_RESULT(yes)
      AC_DEFINE(HAVE_SSL, 1, Define this is the system has SSL support.)
      LIBS="$LIBS -lssl -lcrypto"
      AC_CHECK_LIB(ssl, SSL_accept,,AC_MSG_ERROR(Could not find OpenSSL.))
      ;;
    no)
      AC_MSG_RESULT(no)
      ;;
  esac ],
AC_MSG_RESULT(no)
)


AC_CHECK_FUNC(snprintf, AC_DEFINE(HAVE_SNPRINTF),)
AC_CHECK_FUNC(vsnprintf, AC_DEFINE(HAVE_VSNPRINTF),)
AC_CHECK_FUNC(gethostbyname2, AC_DEFINE(HAVE_GETHOSTBYNAME2),)

AC_OUTPUT(Makefile)
